# Mouse-Bot-v2

./: .gitignore  .pdm.toml  Dockerfile  README.md  pyproject.toml  run.bat
src/main/: bot.py  main.py
src/main/config/: bot.toml
src/main/config/commands/: settings.json
src/main/data/: output.json
src/main/extensions/: bot_tools.py  funny.py  hentai_bus.py  homo.py  main.py  template.py  test.py  tools.py  utility_tools.py
src/test/package_path/site/: a.py
